пересоздал проект с последней версией архетипа maven-a. проверочные тесты созданные архетипом не удалены еще.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-.idea
-target
-out
+.idea/
+target/
+out/
 *.iml
+# игнорировать все .txt файлы в каталоге doc/   позже исправить каталог где будут лежать учетные данные и адреса для рассылки
+#doc/**/*.txt
