--- a/serenity.properties
+++ b/serenity.properties
@@ -1,11 +1,14 @@
 # Define the default driver
-webdriver.driver=firefox
+webdriver.driver=chrome
+
+# Define path to firefox driver
+drivers.windows.webdriver.gecko.driver = src/test/resources/webdriver/windows/geckodriver.exe
 
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Serenity and JUnit
 
 # Root package for any JUnit acceptance tests
-serenity.test.root=com.zhichkin.vlad.features
+serenity.test.root=com.github.zhivv.features
 
 # Customise your riequirements hierarchy
 #serenity.requirement.types=feature, story
