еще раз пересоздал проект. Работает логин на mail.ru

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 target/
 out/
 *.iml
-# игнорировать все .txt файлы в каталоге doc/   позже исправить каталог где будут лежать учетные данные и адреса для рассылки
-#doc/**/*.txt
+# игнорировать все .txt файлы в каталоге data/   
+src/test/resources/data/*.txt
