--- a/serenity.properties
+++ b/serenity.properties
@@ -1,22 +1,15 @@
-# Define the default driver
-webdriver.driver=chrome
-
-# Define path to firefox driver
-drivers.windows.webdriver.gecko.driver = src/test/resources/webdriver/windows/geckodriver.exe
-
-# Appears at the top of the reports
-serenity.project.name = Demo Project using Serenity and JUnit
-
-# Root package for any JUnit acceptance tests
-serenity.test.root=com.github.zhivv.features
-
-# Customise your riequirements hierarchy
+webdriver.driver=firefox
+#serenity.project.name = Demo Project using Serenity and Cucumber
+#serenity.test.root=net.thucydides.showcase.junit.data
+#serenity.dry.run=false
 #serenity.requirement.types=feature, story
+#serenity.use.unique.browser = true
 
-# Run the tests without calling webdriver - useful to check your JUnit wireing
-#serenity.dry.run=true
+#serenity.browser,height = 1200
+#serenity.browser,width = 1200
 
-# Customise browser size
-#serenity.browser.height = 1200
-#serenity.browser.width = 1200
-
+webdriver.timeouts.implicitlywait=10000
+#webdriver.wait.for.timeout=5000
+#serenity.locator.factory=DefaultElementLocatorFactory
+#serenity.sourceDirectory=target/site/out
+#serenity.outputDirectory=target/site/out
