добавлена последняя проверка и инструкция по запуску тестов

--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,6 @@
             <version>${serenity.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-rest-assured</artifactId>
-            <version>${serenity.version}</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -64,40 +59,40 @@
       </dependencies>
           <build>
               <plugins>
-                  <plugin>
-                      <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-surefire-plugin</artifactId>
-                      <version>2.18.1</version>
-                      <configuration>
-                          <testFailureIgnore>true</testFailureIgnore>
-                          <parallel>classes</parallel>
-                          <threadCount>5</threadCount>
-                      </configuration>
-                  </plugin>
-                  <plugin>
-                      <artifactId>maven-failsafe-plugin</artifactId>
-                      <version>2.18.1</version>
-                      <configuration>
-                          <includes>
-                              <include>**/*Test.java</include>
-                          </includes>
-                          <parallel>methods</parallel>
-                          <threadCount>2</threadCount>
-                          <reuseForks>true</reuseForks>
-                          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                          <systemPropertyVariables>
-                              <tags>${tags}</tags>
-                          </systemPropertyVariables>
-                      </configuration>
-                      <executions>
-                          <execution>
-                              <goals>
-                                  <goal>integration-test</goal>
-                                  <goal>verify</goal>
-                              </goals>
-                          </execution>
-                      </executions>
-                  </plugin>
+<!--                  <plugin>-->
+<!--                      <groupId>org.apache.maven.plugins</groupId>-->
+<!--                      <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                      <version>2.18.1</version>-->
+<!--                      <configuration>-->
+<!--                          <testFailureIgnore>true</testFailureIgnore>-->
+<!--                          <parallel>classes</parallel>-->
+<!--                          <threadCount>5</threadCount>-->
+<!--                      </configuration>-->
+<!--                  </plugin>-->
+<!--                  <plugin>-->
+<!--                      <artifactId>maven-failsafe-plugin</artifactId>-->
+<!--                      <version>2.18.1</version>-->
+<!--                      <configuration>-->
+<!--                          <includes>-->
+<!--                              <include>**/*Test.java</include>-->
+<!--                          </includes>-->
+<!--                          <parallel>methods</parallel>-->
+<!--                          <threadCount>2</threadCount>-->
+<!--                          <reuseForks>true</reuseForks>-->
+<!--                          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+<!--                          <systemPropertyVariables>-->
+<!--                              <tags>${tags}</tags>-->
+<!--                          </systemPropertyVariables>-->
+<!--                      </configuration>-->
+<!--                      <executions>-->
+<!--                          <execution>-->
+<!--                              <goals>-->
+<!--                                  <goal>integration-test</goal>-->
+<!--                                  <goal>verify</goal>-->
+<!--                              </goals>-->
+<!--                          </execution>-->
+<!--                      </executions>-->
+<!--                  </plugin>-->
                   <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
                       <artifactId>maven-compiler-plugin</artifactId>
