--- a/serenity.properties
+++ b/serenity.properties
@@ -1,14 +1,24 @@
+# Define the default driver
 webdriver.driver=firefox
+
+# Define path to firefox driver
+drivers.windows.webdriver.gecko.driver = src/test/resources/webdriver/geckodriver.exe
+#drivers.linux.webdriver.gecko.driver = src/test/resources/webdriver/
+#drivers.macos.webdriver.gecko.driver = src/test/resources/webdriver/
+
+webdriver.timeouts.implicitlywait=60000
+
 #serenity.project.name = Demo Project using Serenity and Cucumber
 #serenity.test.root=net.thucydides.showcase.junit.data
 #serenity.dry.run=false
 #serenity.requirement.types=feature, story
 #serenity.use.unique.browser = true
 
+serenity.browser.maximized
 #serenity.browser,height = 1200
 #serenity.browser,width = 1200
 
-webdriver.timeouts.implicitlywait=40000
+
 #webdriver.wait.for.timeout=5000
 #serenity.locator.factory=DefaultElementLocatorFactory
 #serenity.sourceDirectory=target/site/out
